--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
     image: docker.io/pranavs24/mean-backend:latest
     container_name: backend
     restart: unless-stopped
+    ports:
+      - "8080:8080"
     environment:
       - NODE_ENV=production
       - MONGO_URL=mongodb://mongo:27017/dd_db
