--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
   mongo:
     image: mongo:6
     container_name: mongo
+    ports:
+      - "27017:27017"
     restart: unless-stopped
     volumes:
       - mongo_data:/data/db
