--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - "27017:27017"
     restart: unless-stopped
     volumes:
-      - mongo_data:/data/db
+      - /app/mongo_data:/data/db
 
   backend:
     image: docker.io/pranavs24/mean-backend:latest
