--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -12,7 +12,9 @@ RUN npm run ng build --prod
 
 FROM nginx:alpine
 
-COPY --from=build /app/dist/ /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/nginx.conf
+
+COPY --from=build /app/dist/angular-15-crud/ /usr/share/nginx/html/
 
 EXPOSE 80
 
