--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -14,7 +14,7 @@ FROM nginx:alpine
 
 COPY nginx.conf /etc/nginx/nginx.conf
 
-COPY --from=build /app/dist/angular-15-crud/ /usr/share/nginx/html/
+COPY --from=build /app/dist/angular-15-crud/ /usr/share/nginx/html
 
 EXPOSE 80
 
